[package]
name = "concurrent_arena"
version = "0.1.4"
edition = "2018"

license = "MIT"
description = "u32 concurrent insertion/removal arena that returns ArenaArc"
repository = "https://github.com/NobodyXu/concurrency_toolkit"

keywords = ["concurrency", "arena", "shared", "slotmap"]
categories = ["concurrency"]

[features]
thread-sanitizer = []

[dependencies]
const_fn_assert = "0.1.2"
array-init = "2.0.0"

parking_lot = "0.11.2"

triomphe = { version = "0.1.5", features = ["arc-swap"] }
arc-swap = "1.5.0"

[dev-dependencies]
bitvec = "0.20"
rayon = "1.5.1"
